# wayfinder

./: .gitignore  Cargo.toml  README.md  index.html
examples/: plgr.rs  templating.rs
pages/: 404.html  index.html  style.css
pages/blog/: index.html
src/: body.rs  future.rs  handler.rs  lib.rs  router.rs
src/extract/: capture.rs  cookies.rs  de.rs  mod.rs  redirect.rs  request.rs  response.rs  template.rs  wrapper.rs
src/extract/capture/: de.rs  mod.rs
src/extract/form_data/: from_form.rs  mod.rs
src/layer/: logging.rs  mod.rs
src/server/: body.rs  future.rs  handler.rs  mod.rs  request.rs  response.rs  router.rs
src/server/router/: file.rs  mod.rs  template.rs
templates/: index.html
templates/blog/: index.hbs
templates/blog/landing/: index.hbs
templates/docs/: index.html
templates/docs/nested/: index.html
wayfinder-macros/: Cargo.toml
wayfinder-macros/src/: field_options.rs  form_options.rs  lib.rs
