[package]
name = "wsf"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "server", "client", "http2"] }
hyper-util = { version = "0.1.6", features = ["http1", "http2", "server", "service", "tokio", "client"] }
log = "0.4.22"
mime_guess = "2.0.5"
tokio = { version = "1.38.0", features = ["fs", "macros", "net", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.11.3"
